# rust-forum-app

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20260310143640_users_table.sql  20260310143651_posts_table.sql
src/: handlers.rs  main.rs  router.rs
src/handlers/: posts_handler.rs  users_handler.rs
