[package]
name = "forum-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono","runtime-tokio"]}
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
